--- a/Game center/appsettings.json
+++ b/Game center/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "MySql": {
-    "Connection": "server=localhost;uid=root;pwd=root;database=Authorization"
+  "ConnectionStrings": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Authorization;Integrated Security=true"
   },
   "GameCenter": {
     "ValidAudienceURL": "http://localhost:7079",
