--- a/Game center/appsettings.json
+++ b/Game center/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Authorization;Integrated Security=true"
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Authorization;Integrated Security=true;MultipleActiveResultSets=true"
   },
   "GameCenter": {
     "ValidAudienceURL": "http://localhost:7079",
